# xcsv-plot-map

./: .gitignore  README.md  pyproject.toml
tests/: test_xcsv_plot_map.py
tests/data/: short-bbox-coord-mislabelled-test-data.csv  short-bbox-coord-missing-test-data.csv  short-bbox-coord-missing-test-key-test-data.csv  short-bbox-coord-no-units-test-data.csv  short-point-coord-mislabelled-test-data.csv  short-point-coord-missing-test-data.csv  short-point-coord-missing-test-key-test-data.csv  short-point-coord-no-units-test-data.csv  short-test-data-2.csv  short-test-data-3.csv  short-test-data-4.csv  short-test-data-5.csv  short-test-data-6.csv
xcsv/plot_map/: __init__.py  __main__.py
